[build-system]
requires = ["setuptools>=68", "wheel"]

[project]
name = "zenhtml"
version = "0.1.4"
description = "Typed HTML builder with generated tag helpers."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Yusuke KITAGAWA", email = "tonosama_kaeru@icloud.com" }]
dependencies = []

[project.urls]
Homepage = "https://github.com/MeiRakuPapa/ZenHtml"

[dependency-groups]
dev = [
    "ruff",
    "debugpy",
    "pytest",
    "mypy",
    "mypy-extensions",
    "ipython",
    "jupyter",
    "pytest-cov",
    "pandas",
    "pandas-stubs",
    "fastapi",
    "pydantic",
    "pre-commit",
    "build"
]

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
exclude = "(build|dist)"
